estilização inputs,labels e placeholder

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <section class="modals">
             <div class="modal-despesa">
                 <div class="conteudo-despesa">
-                    <label for="nome-despesa">Qual o nome de sua despesa?</label>
+                    <label id="label-nome-despesa" for="nome-despesa">Qual o nome de sua despesa?</label>
                     <input id="nome-despesa" name="nome-despesa" type="text" placeholder="Digite o nome da sua despesa">
-                    <label for="valor-despesa">Qual o valor de sua despesa?</label>
+                    <label id="label-valor-despesa" for="valor-despesa">Qual o valor de sua despesa?</label>
                     <input id="valor-despesa" name="valor-despesa" type="text" placeholder="R$">
                     <div class="botoes">
                         <button class="btn-adicionar-despesa" onclick="adicionarDespesa()">Adicionar despesa</button>
@@ -76,9 +76,9 @@
             </div>
             <div class="modal-receita">
                 <div class="conteudo-receita">
-                    <label for="nome-receita">Qual o nome de sua receita?</label>
+                    <label id="label-nome-receita" for="nome-receita">Qual o nome de sua receita?</label>
                     <input id="nome-receita" name="nome-receita" type="text" placeholder="Digite o nome da sua receita">
-                    <label for="valor-receita">Qual o valor de sua receita?</label>
+                    <label  id="label-valor-despesa" for="valor-receita">Qual o valor de sua receita?</label>
                     <input id="valor-receita" name="valor-receita" type="text" placeholder="R$">
                     <div class="botoes">
                         <button class="btn-adicionar-receita" onclick="adicionarReceita()">Adicionar receita</button>
