--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Planilha de gastos</h1>
 
             <div class='informacao'>
-                <p id='saldo'>R$ 10,00</p>
+                <p id='saldo'>Carregando..</p>
             </div>
 
             <table class='lista-transacoes'>
@@ -33,24 +33,24 @@
                 </thead>
                 <tbody id='lista-transacoes-conteudo'>
                     <tr>
-                        <td class='coluna-descricao'>Salgado na faculdade</td>
-                        <td class='coluna-categoria'>Despesa</td>
-                        <td class='coluna-valor'>R$ 5,50</td>
+                        <td class='coluna-descricao'></td>
+                        <td class='coluna-categoria'></td>
+                        <td class='coluna-valor'></td>
                     </tr>
                     <tr>
-                        <td class='coluna-descricao'>Livro Clean Code</td>
-                        <td class='coluna-categoria'>Despesa</td>
-                        <td class='coluna-valor'>R$ 50,00</td>
+                        <td class='coluna-descricao'></td>
+                        <td class='coluna-categoria'></td>
+                        <td class='coluna-valor'></td>
                     </tr>
                     <tr>
-                        <td class='coluna-descricao'>Grana do estágio</td>
-                        <td class='coluna-categoria'>Receita</td>
-                        <td class='coluna-valor'>R$ 80,00</td>
+                        <td class='coluna-descricao'></td>
+                        <td class='coluna-categoria'></td>
+                        <td class='coluna-valor'></td>
                     </tr>
                     <tr>
-                        <td class='coluna-descricao'>Capinha pro celular</td>
-                        <td class='coluna-categoria'>Despesa</td>
-                        <td class='coluna-valor'>R$ 15,00</td>
+                        <td class='coluna-descricao'></td>
+                        <td class='coluna-categoria'></td>
+                        <td class='coluna-valor'></td>
                     </tr>
                 </tbody>
             </table>
